// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vytvoř ročník s jednou kategorií 1`] = `
Array [
  Object {
    "__v": 0,
    "datum": 2017-06-10T00:00:00.000Z,
    "kategorie": Array [
      Object {
        "kategorie": Array [
          Object {
            "__v": 0,
            "pohlavi": "žena",
            "typ": "maraton",
            "vek": Object {
              "max": 49,
              "min": 40,
            },
          },
        ],
        "startCisla": Object {
          "rozsahy": Array [
            "1-100",
          ],
        },
        "startovne": Object {
          "naMiste": 200,
          "predem": 150,
        },
        "typ": "maraton",
      },
    ],
    "rok": 2017,
  },
]
`;

exports[`vytvoř ročník s ubytováním 1`] = `
Array [
  Object {
    "__v": 0,
    "datum": 2017-06-10T00:00:00.000Z,
    "kategorie": Array [
      Object {
        "kategorie": Array [
          Object {
            "__v": 0,
            "pohlavi": "žena",
            "typ": "maraton",
            "vek": Object {
              "max": 49,
              "min": 40,
            },
          },
          Object {
            "__v": 0,
            "pohlavi": "žena",
            "typ": "maraton",
            "vek": Object {
              "max": 59,
              "min": 50,
            },
          },
        ],
        "startCisla": Object {
          "rozsahy": Array [
            "1-100",
          ],
        },
        "startovne": Object {
          "naMiste": 200,
          "predem": 150,
        },
        "typ": "maraton",
      },
    ],
    "rok": 2017,
    "ubytovani": Object {
      "pátek": Object {
        "poplatek": 50,
      },
      "sobota": Object {
        "poplatek": 60,
      },
    },
  },
]
`;
